--- a/profiles/templates/profiles/sidebar_reports.html
+++ b/profiles/templates/profiles/sidebar_reports.html
@@ -11,6 +11,9 @@
                         <a href="{% url 'planningandacquiring:vet_date'%}" class="item">
                                 <i class="money bill alternate outline icon"></i>Veterinarian Report
                         </a>
+                        <a href="{% url 'planningandacquiring:inventory_date'%}" class="item">
+                                <i class="money bill alternate outline icon"></i>Inventory Report
+                        </a>
                                 <a href="{% url 'planningandacquiring:accomplishment_date'%}" class="item">
                                 <i class="money bill alternate outline icon"></i>Accomplishment Report
                         </a>
