--- a/planningandacquiring/templates/planningandacquiring/handler_report.html
+++ b/planningandacquiring/templates/planningandacquiring/handler_report.html
@@ -10,6 +10,7 @@
     {% endfor %}
 </div>
 {% endif %}
+<div id="printableArea">
 <div class="ui segment">
         <center>
         <br><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Philippine_Coast_Guard_%28PCG%29.svg/220px-Philippine_Coast_Guard_%28PCG%29.svg.png" width="100">
@@ -45,6 +46,10 @@
     <br>
 
 </div>
+</div>
+
+<center><input type="button" onclick="printDiv('printableArea')" value="Print" /></center>
+
 
 <script type="text/javascript">
 
@@ -59,6 +64,17 @@
         });
 
     } );
+
+       function printDiv(divName) {
+     var printContents = document.getElementById(divName).innerHTML;
+     var originalContents = document.body.innerHTML;
+
+     document.body.innerHTML = printContents;
+
+     window.print();
+
+     document.body.innerHTML = originalContents;
+}
 
 </script>
  {% endblock %}
